// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppDialogSheet > hides modal content when visible is false 1`] = `
<rn-Modal
  animationType="slide"
  onRequestClose={[Function]}
  transparent={true}
  visible={false}
>
  <rn-Pressable
    className="flex-1 justify-end bg-black/40"
    onPress={[Function]}
  >
    <rn-Pressable
      className="bg-background pb-10"
      onPress={[Function]}
      testID="dialog-sheet"
    >
      <rn-View
        className="flex-row items-center justify-between border-b border-border px-5 py-4"
      >
        <rn-Text
          className="text-xl font-bold text-foreground"
        >
          Hidden
        </rn-Text>
        <rn-Pressable
          disabled={false}
          hitSlop={12}
          onPress={[Function]}
        >
          <lucide-X
            color="#5f5b66"
            size={20}
          />
        </rn-Pressable>
      </rn-View>
      <rn-View
        className="gap-4 px-5 pt-4"
      >
        <rn-View
          className="gap-3"
        />
      </rn-View>
    </rn-Pressable>
  </rn-Pressable>
</rn-Modal>
`;

exports[`AppDialogSheet > renders the dialog when visible with message + actions 1`] = `
<rn-Modal
  animationType="slide"
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <rn-Pressable
    className="flex-1 justify-end bg-black/40"
    onPress={[Function]}
  >
    <rn-Pressable
      className="bg-background pb-10"
      onPress={[Function]}
      testID="dialog-sheet"
    >
      <rn-View
        className="flex-row items-center justify-between border-b border-border px-5 py-4"
      >
        <rn-Text
          className="text-xl font-bold text-foreground"
        >
          Delete Report
        </rn-Text>
        <rn-Pressable
          disabled={false}
          hitSlop={12}
          onPress={[Function]}
        >
          <lucide-X
            color="#5f5b66"
            size={20}
          />
        </rn-Pressable>
      </rn-View>
      <rn-View
        className="gap-4 px-5 pt-4"
      >
        <rn-View
          className="rounded-md border px-4 py-3 border-danger-border bg-danger-soft"
          style={
            {
              "elevation": 2,
              "shadowColor": "#1a1a2e",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.08,
              "shadowRadius": 8,
            }
          }
        >
          <rn-Text
            className="mb-1 text-sm font-semibold text-danger-text"
            selectable={true}
          >
            Permanent action
          </rn-Text>
          <rn-Text
            className="text-sm text-danger-text"
            selectable={true}
          >
            This report will be permanently deleted.
          </rn-Text>
        </rn-View>
        <rn-View
          className="gap-3"
        >
          <rn-Pressable
            className="flex-row items-center rounded-md border border-danger-border bg-danger-soft active:opacity-85 min-h-touch px-5 py-3.5 justify-center"
            disabled={false}
            onPress={[Function]}
            style={
              [
                {
                  "elevation": 2,
                  "shadowColor": "#1a1a2e",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 8,
                },
                undefined,
              ]
            }
            testID="btn-delete"
          >
            <rn-Text
              className="text-danger-text font-semibold text-base"
            >
              Delete
            </rn-Text>
          </rn-Pressable>
          <rn-Pressable
            className="flex-row items-center rounded-md border border-border bg-secondary active:opacity-90 min-h-touch px-5 py-3.5 justify-center"
            disabled={false}
            onPress={[Function]}
            style={
              [
                {
                  "elevation": 2,
                  "shadowColor": "#1a1a2e",
                  "shadowOffset": {
                    "height": 2,
                    "width": 0,
                  },
                  "shadowOpacity": 0.08,
                  "shadowRadius": 8,
                },
                undefined,
              ]
            }
            testID="btn-cancel"
          >
            <rn-Text
              className="text-foreground font-semibold text-base"
            >
              Cancel
            </rn-Text>
          </rn-Pressable>
        </rn-View>
      </rn-View>
    </rn-Pressable>
  </rn-Pressable>
</rn-Modal>
`;
